enum-ptr-test/tests/fail/field_type.stderr
error: Unsupported shape `named fields`. Expected unnamed fields.
 --> tests/fail/field_type.rs:5:10
  |
5 | #[derive(EnumPtr)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `EnumPtr` (in Nightly builds, run with -Z macro-backtrace for more info)
